:recycle: / refactor: replace collect() to toList()